# spotpipe

./: .gitignore  CLAUDE.md  README.md  VENDORED_NOTES.md  pyproject.toml
configs/: benchmark.yaml  benchmark_smoke.yaml  benchmark_test_set.yaml  default.yaml  simulator.yaml  smoke.yaml  train.yaml  train_40k_DELTA.yaml  train_40k_INDEP.yaml  train_headfix_DELTA.yaml  train_headfix_INDEP.yaml  train_probe_A_status_quo.yaml  train_probe_B_flat.yaml  train_smoke.yaml
data/: README.md
docs/: BENCHMARK_RESULTS_v3.md  PRESENTATION_FACTS.md  alpha_convention.md  baseline_comparison_masterdoc.md  benchmark_grid_requirements.md  cmeanalysis_adapter.md  coverage_probe_findings.md  evaluator_convention.md  handoff_2026-07-14_benchmark_v3.md  handoff_retrain_intensity_head.md  head_fix_results.md  intensity_head_fix_proposal.md  loss_and_outputs_brief.md  measured_detector_retrain.md  rarity_probe_findings.md  shrinkage_probe_findings.md  snr_convention.md  spotmax_adapter.md  training_distribution.md  v0_hrnet_adapter.md
scripts/: _torch_stub.py  alpha_probe.py  bright_dense_probe.py  build_fixed_eval.py  convert_spotmax_output.py  coverage_probe.py  darkcount_robustness.py  export_spotmax_input.py  eyeball_sim.py  gate_c_intensity_on_gt.py  make_40k_headfix_configs.py  make_benchmark_set.py  make_delta_configs.py  make_probe_configs.py  new_experiment.py  prepare_spotiflow_finetune_data.py  run_benchmark.py  run_cmeanalysis.py  run_headfix_40k.sh  run_headfix_40k_overnight.sh  run_headfix_bakeoff.sh  run_overnight.py  run_rarity_probe.sh  run_spotiflow_predict.py  shrinkage_probe.py  (+6 more)
(+90 files in other folders)
