[project]
name = "spotpipe"
version = "0.1.0"
description = "Two-channel microscopy spot-detection pipeline (FV3000 forward model + neural spot detector)."
readme = "README.md"
# torch does not yet publish wheels for Python 3.14; constrain so `uv sync`
# resolves a supported interpreter (uv will fetch CPython 3.12 if needed).
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "pyyaml",
    "pandas",
    "matplotlib",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotpipe"]

[tool.uv]
# Editable install of the local package so `from spotpipe... import ...`
# resolves from anywhere (including experiments/ subfolders) with no sys.path hacks.
package = true
