[project]
name = "spotpipe"
version = "0.2.0"
description = "Two-channel microscopy spot-detection pipeline (FV3000 forward model + neural spot detector). Rebuilt repo: vendored precious core, fresh harness."
readme = "README.md"
# torch does not publish wheels for Python 3.14 yet; constrain accordingly.
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "pyyaml",
    "pandas",
    "tifffile",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
spotpipe = "spotpipe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotpipe"]
